--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,14 +1,20 @@
 /* Universal Styles */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(https://fonts.gstatic.com/s/roboto/v18/KFOlCnqEu92Fr1MmSU5fBBc4.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 html {
   font-family:"Roboto", sans-serif;
   font-size: 16px;
+  font-weight: 700;
+  color: red;
 }
 
-@font-face{
-  font-family: "Roboto";
-  src: url(https://fonts.googleapis.com/css?family=Roboto:300,400,600,700);
-}
+
 .main-content {
   position: relative;
   top: 5.3125rem; /* To offset for fixed header. */
